--- a/index.html
+++ b/index.html
@@ -1,60 +1,85 @@
 <html lang="en">
-<head>
-    <meta charset="utf-8"/>
-    <meta content="width=device-width, initial-scale=1.0" name="viewport"/>
-    <title>Koleksiku</title>
-    <script src="https://cdn.tailwindcss.com"></script>
-    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" rel="stylesheet"/>
-</head>
-<body class="bg-gray-100">
-    <div class="max-w-md mx-auto bg-white shadow-lg">
-        <!-- Header -->
-        <div class="flex items-center justify-between p-4 border-b">
-            <div class="flex items-center space-x-2">
-                <i class="fas fa-arrow-left text-red-500"></i>
-                <h1 class="text-xl font-semibold">Koleksiku</h1>
-            </div>
-            <i class="fas fa-share text-red-500"></i>
-        </div>
-        <!-- Profile Section -->
-        <div class="flex items-center p-4 bg-blue-200">
-            <img alt="Profile picture of various gadgets" class="w-12 h-12 rounded-full" height="50" src="https://placehold.co/50x50" width="50"/>
-            <div class="ml-4">
-                <h2 class="text-white font-semibold">Useful Gadgets</h2>
-            </div>
-        </div>
-        <!-- Tabs -->
-        <div class="flex justify-around p-4 bg-white">
-            <button class="px-4 py-2 border rounded-md">Untuk Konten Kreator</button>
-            <button class="px-4 py-2 border rounded-md">Alat untuk Handphone</button>
-        </div>
-        <!-- Product Grid -->
-        <div class="grid grid-cols-2 gap-2 p-4">
-            <!-- Product 1 -->
-            <div class="bg-white border rounded-md p-2">
-                <img alt="Desktop Phone Stand Holder in various colors" class="w-full h-32 object-cover md:h-48" src="https://placehold.co/150x150"/>
-                <p class="text-sm mt-2">Desktop Phone Stand Holder Tempat Dudukan ...</p>
-            </div>
-            <!-- Product 2 -->
-            <div class="bg-white border rounded-md p-2">
-                <img alt="Power Bank 99000mAh 3 USB Port Quick Charge 2.0" class="w-full h-32 object-cover md:h-48" src="https://placehold.co/150x150"/>
-                <p class="text-sm mt-2">Power Bank 99000mAh 3 USB Port Quick Charge 2.0</p>
-            </div>
-            <!-- Product 3 -->
-            <div class="bg-white border rounded-md p-2">
-                <img alt="I13 Pro TWS Headset Bluetooth Bass 9D HiFi Stereo" class="w-full h-32 object-cover md:h-48" src="https://placehold.co/150x150"/>
-                <p class="text-sm mt-2">I13 Pro TWS Headset Bluetooth Bass 9D HiFi St...</p>
-            </div>
-            <!-- Product 4 -->
-            <div class="bg-white border rounded-md p-2">
-                <img alt="HEADSET BANDO / HEADPHONE EXTRA BASS" class="w-full h-32 object-cover md:h-48" src="https://placehold.co/150x150"/>
-                <p class="text-sm mt-2">HEADSET BANDO / HEADPHONE EXTRA BA...</p>
-            </div>
-        </div>
-        <!-- Footer Button -->
-        <div class="p-4">
-            <button class="w-full py-2 bg-red-500 text-white rounded-md">Atur Koleksiku</button>
-        </div>
+ <head>
+  <meta charset="utf-8"/>
+  <meta content="width=device-width, initial-scale=1.0" name="viewport"/>
+  <title>
+   Koleksiku
+  </title>
+  <script src="https://cdn.tailwindcss.com">
+  </script>
+  <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" rel="stylesheet"/>
+ </head>
+ <body class="bg-gray-100">
+  <div class="max-w-full mx-auto bg-white shadow-md">
+   <!-- Header -->
+   <div class="flex items-center justify-between p-4 border-b">
+    <div class="flex items-center">
+     <i class="fas fa-arrow-left text-red-500">
+     </i>
+     <h1 class="ml-2 text-lg font-semibold">
+      Koleksiku
+     </h1>
     </div>
-</body>
+    <i class="fas fa-share text-red-500">
+    </i>
+   </div>
+   <!-- Profile Section -->
+   <div class="flex items-center p-4 bg-blue-200">
+    <img alt="Profile picture of various gadgets" class="w-12 h-12 rounded-full" height="50" src="https://storage.googleapis.com/a1aa/image/9gO6CepJxLJBF_QyF4Fz0RMsHWu0GsZDGcFtmSdZpuk.jpg" width="50"/>
+    <div class="ml-4">
+     <h2 class="text-white font-semibold">
+      Useful Gadgets
+     </h2>
+    </div>
+   </div>
+   <!-- Tabs -->
+   <div class="flex justify-around p-2 bg-white">
+    <button class="px-4 py-2 bg-gray-100 rounded">
+     Untuk Konten Kreator
+    </button>
+    <button class="px-4 py-2 bg-gray-100 rounded">
+     Alat untuk Handphone
+    </button>
+   </div>
+   <!-- Product Grid -->
+   <div class="grid grid-cols-4 gap-2 p-2">
+    <!-- Product 1 -->
+    <div class="bg-white p-2 rounded shadow">
+     <img alt="Desktop Phone Stand Holder in various colors" class="w-full h-32 object-cover rounded" height="150" src="https://storage.googleapis.com/a1aa/image/VoDm7YzI2YgNdWK3HqW4seDqN_eeSQz-5TTOeePdomA.jpg" width="150"/>
+     <p class="mt-2 text-sm">
+      Desktop Phone Stand Holder Tempat Dudukan ...
+     </p>
+    </div>
+    <!-- Product 2 -->
+    <div class="bg-white p-2 rounded shadow">
+     <img alt="Power Bank 99000mAh 3 USB Port Quick Charge 2.0" class="w-full h-32 object-cover rounded" height="150" src="https://storage.googleapis.com/a1aa/image/B15Jx59iwQj5JSo21LZRpfMMh7F9RSuXAOi58qSzZ4I.jpg" width="150"/>
+     <p class="mt-2 text-sm">
+      Power Bank 99000mAh 3 USB Port Quick Charge 2.0
+     </p>
+    </div>
+    <!-- Product 3 -->
+    <div class="bg-white p-2 rounded shadow">
+     <img alt="I13 Pro TWS Headset Bluetooth Bass 9D HiFi Stereo" class="w-full h-32 object-cover rounded" height="150" src="https://storage.googleapis.com/a1aa/image/y91d8htadaFz5jtgh7PhUbyQ_V_6vitDwflStrG39I8.jpg" width="150"/>
+     <p class="mt-2 text-sm">
+      I13 Pro TWS Headset Bluetooth Bass 9D HiFi St...
+     </p>
+    </div>
+    <!-- Product 4 -->
+    <div class="bg-white p-2 rounded shadow">
+     <img alt="HEADSET BANDO / HEADPHONE EXTRA BASS" class="w-full h-32 object-cover rounded" height="150" src="https://storage.googleapis.com/a1aa/image/nuRc1sHUbD7S0Y0Il1cnGmV8kloJnvDHhvqt5nvXePI.jpg" width="150"/>
+     <p class="mt-2 text-sm">
+      HEADSET BANDO / HEADPHONE EXTRA BA...
+     </p>
+    </div>
+   </div>
+   <!-- Footer Button -->
+   <div class="p-4">
+    <button class="w-full py-2 bg-green-500 text-white rounded flex items-center justify-center">
+     <i class="fab fa-whatsapp mr-2">
+     </i>
+     Chat ke Whatsapp
+    </button>
+   </div>
+  </div>
+ </body>
 </html>
