--- a/index.html
+++ b/index.html
@@ -70,11 +70,12 @@
    </div>
    <!-- Footer Button -->
    <div class="p-4">
-    <button class="w-full py-2 bg-green-500 text-white rounded-md flex items-center justify-center">
+    <a href="https://wa.me/6295367035000"><button class="w-full py-2 bg-green-500 text-white rounded-md flex items-center justify-center">
      <i class="fab fa-whatsapp mr-2">
      </i>
      Chat ke Whatsapp
     </button>
+    </a>
    </div>
   </div>
  </body>
